Modify parts dir

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
 .idea
 .sass-cache
 .DS_Store
-.keep
+.atom
+.vscode
+.log
+node_modules
+npm-debug.log
+guide
+mix-manifest.json
+*.map
+/wp/*
+!/wp/wp-content/
+/wp/wp-content/*
+!/wp/wp-content/plugins/
+!/wp/wp-content/languages/
+/wp/wp-content/languages/*
+!/wp/wp-content/languages/plugins/
+/wp/wp-content/languages/plugins/akismet*
+!/wp/wp-content/themes/
+/wp/wp-content/themes/*/assets/
