Modify default gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,18 @@
 .idea
-.sass-cache
-.DS_Store
 .atom
 .vscode
-.log
+.DS_Store
+.sass-cache
+.env
 node_modules
-npm-debug.log
 guide
-mix-manifest.json
 *.map
+*.log
+!.keep
+!.gitkeep
 /wp/*
 !/wp/wp-content/
 /wp/wp-content/*
-!/wp/wp-content/plugins/
-!/wp/wp-content/languages/
-/wp/wp-content/languages/*
-!/wp/wp-content/languages/plugins/
-/wp/wp-content/languages/plugins/akismet*
 !/wp/wp-content/themes/
 /wp/wp-content/themes/*/assets/
+!/wp/wp-content/themes/lig-wordpress-template/
